src/validation/tests/snapshots/rusty__validation__tests__duplicates_validation_test__duplicate_pous_validation.snap
---
source: src/validation/tests/duplicates_validation_test.rs
expression: "&diagnostics"
---
error[E004]: foo: Ambiguous callable symbol.
  ┌─ <internal>:4:25
  │
2 │         FUNCTION        foo : INT  END_FUNCTION
  │                         --- see also
3 │ 
4 │         PROGRAM         foo  END_PROGRAM
  │                         ^^^ foo: Ambiguous callable symbol.

error[E004]: foo: Ambiguous callable symbol.
  ┌─ <internal>:2:25
  │
2 │         FUNCTION        foo : INT  END_FUNCTION
  │                         ^^^ foo: Ambiguous callable symbol.
3 │ 
4 │         PROGRAM         foo  END_PROGRAM
  │                         --- see also

error[E004]: foo: Duplicate symbol.
  ┌─ <internal>:2:25
  │
2 │         FUNCTION        foo : INT  END_FUNCTION
  │                         ^^^ foo: Duplicate symbol.
3 │ 
4 │         PROGRAM         foo  END_PROGRAM
  │                         --- see also
5 │ 
6 │         FUNCTION_BLOCK  foo  END_FUNCTION_BLOCK
  │                         --- see also

error[E004]: foo: Duplicate symbol.
  ┌─ <internal>:4:25
  │
2 │         FUNCTION        foo : INT  END_FUNCTION
  │                         --- see also
3 │ 
4 │         PROGRAM         foo  END_PROGRAM
  │                         ^^^ foo: Duplicate symbol.
5 │ 
6 │         FUNCTION_BLOCK  foo  END_FUNCTION_BLOCK
  │                         --- see also

error[E004]: foo: Duplicate symbol.
  ┌─ <internal>:6:25
  │
2 │         FUNCTION        foo : INT  END_FUNCTION
  │                         --- see also
3 │ 
4 │         PROGRAM         foo  END_PROGRAM
  │                         --- see also
5 │ 
6 │         FUNCTION_BLOCK  foo  END_FUNCTION_BLOCK
  │                         ^^^ foo: Duplicate symbol.
